maybe fix of sticky footer overlapping content.

--- a/django_advisor/static/css/sticky_footer.css
+++ b/django_advisor/static/css/sticky_footer.css
@@ -4,7 +4,7 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 0px;
+  margin-bottom: 100px;
 }
 .footer {
   position: absolute;
